[tool.poetry]
name = "wavyunrealisticpress"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ecapture = "^0.1.8"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"
wolframalpha = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
